# kanso

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  run.bat  run.sh
.github/workflows/: build.yml  kanso-cd.yml  kanso-ci.yml  kernel-build.yml  kernel-ci.yml  kernel-test.yml  release-pine64_star64.yml  release-riscv64_pine64_star64.yml  release.yml
.github/workflows/releases/: release-pine64_star64.yml
.github/workflows/releases/pine64_star64/: genimage.cfg  star64-uboot-fit-image.its
cmake/: generate_version_header.cmake  utils.cmake
cmake/Toolchains/: clang.cmake  riscv-common.cmake  riscv32.cmake  riscv64.cmake
src/: UnityBuild.c
src/Common/: CMakeLists.txt  Memory.c  Memory.h  String.c  String.h  System.h  Test.c  Test.h  TestHost.c  TestHost.h  Types.c  Types.h  UnityBuild.c
src/Kernel/: CMakeLists.txt  Kernel.c  Kernel.h  KernelConsole.c  KernelConsole.h  KernelMain.c  KernelMemory.c  KernelSystem.c  KernelTest.c  KernelTestHost.c  Logo.txt  Platform.h  UnityBuild.c
test-bios/: CMakeLists.txt  hello-kernel.c  hello-kernel.ld  hello-kernel.s  hello.c  hello.ld  hello.s  run.sh
tests/Common/: MemoryAllocationTests.c  MemoryTests.c  StringTests.c  TypesTests.c  UnityBuild.c
tests/Kernel/: CpuTests.c  UnityBuild.c
